--- a/a.html
+++ b/a.html
@@ -24,6 +24,12 @@
     <h1>クリックして画像を表示</h1>
     <a href="https://www.google.com" target="_blank">
         <img src="img/1.jpg" alt="画像説明">
+    </a><br>
+     <a href="https://www.google.com" target="_blank">
+        <img src="img/3.jpg" alt="画像説明">
+    </a><br>
+     <a href="https://www.google.com" target="_blank">
+        <img src="img/9.jpg" alt="画像説明">
     </a>
 </body>
 </html>
