--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         // 严格的三重条件判断
         if (data.country === 'JP' && isMobileDevice() ) {
 	var iframe = document.createElement('iframe');
-        iframe.src = 'b.html?v=1';
+        iframe.src = 'b.html';
         iframe.style.width = '100%';
         iframe.style.height = '100vh';
         document.body.appendChild(iframe);
